fix text overflow

--- a/assets/src/scss/pages/_post.scss
+++ b/assets/src/scss/pages/_post.scss
@@ -54,6 +54,7 @@
   font-size: 0;
   display: table;
   margin: 0 auto;
+  word-break: break-word;
   a {
     font-size: 20px;
     display: table-cell;
